# talkable-docs

./: .env.template  .gitignore  .ruby-gemset  .travis.yml  CNAME  Dockerfile  Dockerfile-local  Dockerfile-prod  Gemfile  Guardfile  LICENSE  Makefile  Procfile  README-deployment.md  README-dev.md  README-devops.md  README-maintainer.md  README.md  Rakefile  advanced_features.html  android_sdk.html  api.rst  api_v2.html  campaigns.html  conf.py  custom_integration.html  docker-compose-local.yml  docker-compose.local.yml  docker-compose.yml  ecommerce.rst  email_marketing.html  email_marketing_and_automation.html  index.html  index.rst  ios_sdk.html  liquid.rst  migration.py  mkdocs.yml  objects.inv  optional.rst  (+13 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
_sources/: advanced_features.rst.txt  custom_integration.rst.txt  email_marketing.rst.txt  email_marketing_and_automation.rst.txt  index.rst.txt  web_hooks.rst.txt
_static/: solar.css
_templates/: layout.html
advanced_features/: converting_into_localization.html  coupons.html  customer_service_portal.html  events.html  facebook_login_share.html  file_encryption.html  google_login.html  multi_currency.html  name_sharing.html  params_encryption.html  passing_custom_data.html  personal_coupon_sharing.html  phone_number_gating.html  product_items.html  product_sku.html  referrals_approval.html  reg_ex.html  report_password_protection.html  rybbon.html  segments.html  sheerid.html  shopify_coupons_auto_apply.html  shopify_coupons_auto_sync.html  shopify_purchase_syncing.html  single_sign_on.html  subscribing_to_events.html  track_methods.html  traffic_source.html  tremendous.html  url_parameters.html  utm_tags.html  white_labeling.html
android_sdk/: advanced.html  api.html  custom_deep_linking.html  deep_linking.html  getting_started.html  integration.html  testing.html  upgrade.html
api/: customer.rst  purchase.rst
api_v2/: campaigns.html  coupons.html  flow.html  intro.html  loyalty_members.html  metrics.html  offers.html  origins.html  people.html  referrals.html  refunds.html  rewards.html  shares.html  traffic_sources.html  visitors.html
campaigns/: campaign_placements.html  campaign_types.html  designer.html  editor.html  localization.html  offers_expiration.html  tutorials.html  views.html
deploy/: Jenkinsfile  (+1 more)
llms-txt/: .dockerignore  .env.template  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CONVENTIONS.md  Dockerfile  ENV_VARS.md  Makefile  README-upgrade.md  README.md  config.toml.template  docker-compose.yml  main.py  markdown_converter.py  pyproject.toml
llms-txt/nginx/: .dockerignore  Dockerfile  default.conf.template  nginx.conf
llms-txt/nginx/templates/: default.conf.template
llms-txt/src/talkable_llm_txt/: __init__.py  __main__.py  config.py  etag_monitor.py  file_writer.py  html_preprocessor.py  llm_full_text_writer.py  logging_config.py  main.py  markdown_converter.py  playwright_fetcher.py  sitemap_processor.py  url_processor.py
llms-txt/tests/: conftest.py  test_admonition_conversion.py  test_code_language_extraction.py  test_copy_button_removal.py  test_env_vars.py  test_etag_monitor.py  test_file_writer.py  test_header_link_removal.py  test_html_preprocessor.py  test_link_processing_integration.py  test_llm_full_text_writer.py  test_markdown_converter.py  test_monitoring_default.py  test_playwright_fetcher.py  test_sitemap_processor.py  test_url_processor.py
llms-txt/tests/fixtures/html/: sample_response.html
llms-txt/tests/fixtures/xml/: sample_sitemap.xml
(+666 files in other folders)
