[project]
name = "talkable-docs"
version = "0.1.0"
description = "Talkable Public Documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx-copybutton",
    "sphinx-sitemap",
    "sphinx-autobuild",
    "sphinx-design",
    "sphinx-book-theme",
    "pydata-sphinx-theme==0.15.4",
    "mkdocs-material>=9.6.21",
    "lxml>=6.0.2",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.2",
    "html-to-markdown>=1.16.0",
    "playwright>=1.55.0",
    "pytest>=8.4.2",
]
