[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/talkable_llm_txt"]

[project]
name = "talkable-llm-txt"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.14.2",
    "html-to-markdown>=1.16.0",
    "playwright>=1.55.0",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "toml>=0.10.2",
]

[project.scripts]
talkable-llm-txt = "talkable_llm_txt.__main__:main"

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
addopts = [
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
